Bug 230736 - amarok's add applet browser doesn't display name of the widgets
Summary: amarok's add applet browser doesn't display name of the widgets
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-14 18:10 UTC by Janet
Modified: 2010-03-15 00:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (13.61 KB, image/jpeg)
2010-03-14 18:15 UTC, Janet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2010-03-14 18:10:15 UTC
Version:           2.2.2 (using 4.3.4 (KDE 4.3.4), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.33-0.slh.10-sidux-686

Amarok's applet browser only shows the icons of the applets and a tiny part of the name which is not readable. Therefore I don't know which applet it is before I have added it. The applet browser either should have tooltips or the name of the applet should be fully visible, the user should be able to identify the applet before it is added.
Comment 1 Janet 2010-03-14 18:15:47 UTC
Created attachment 41624 [details]
screenshot
Comment 2 Jakub Wieczorek 2010-03-15 00:10:36 UTC
commit 69d8ab73be74764c973d1ee1c474f307c0260a3f
Author: Jakub Wieczorek <faw217@gmail.com>
Date:   Sun Mar 14 23:59:43 2010 +0100

    Display tooltips with applet names in the context toolbar.
    
    BUG: 230736

diff --git a/ChangeLog b/ChangeLog
index 4d97b0e..43dc098 100644
--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@ VERSION 2.3.1-Beta 1
   BUGFIXES:
      * Cover fetcher: Fixed a crash involving reappearing cover found dialogs
        and pending cover fetches. (BR 230215)
+     * Display tooltips with applet names in the context toolbar. (BR 230736)
 
 
 VERSION 2.3
diff --git a/src/context/toolbar/AppletToolbarAppletItem.cpp b/src/context/toolbar/AppletToolbarAppletItem.cpp
index 8a77798..3f6a823 100644
--- a/src/context/toolbar/AppletToolbarAppletItem.cpp
+++ b/src/context/toolbar/AppletToolbarAppletItem.cpp
@@ -48,9 +48,14 @@ Context::AppletToolbarAppletItem::AppletToolbarAppletItem( QGraphicsItem* parent
 {
     m_label = new QGraphicsSimpleTextItem( this );
     if( m_applet )
+    {
        m_label->setText( m_applet->name() );
+       setToolTip( m_applet->name() );
+    }
     else
+    {
         m_label->setText( i18n("no applet name") );
+    }
 
     setAcceptHoverEvents( true );
     m_label->setAcceptHoverEvents( true );