Display tooltips with applet names in the context toolbar.

BUG: 230736